# rich-sdl2-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js  wrapper.h
.github/: renovate.json
.github/workflows/: audit-else.yml  audit.yml  publish.yml  release-please.yml  rust.yml
examples/: show-interfaces.rs  simple-window.rs
implementors/raw_window_handle/: trait.HasRawWindowHandle.js
rich-sdl2-rust-sys/: Cargo.toml  build.rs  wrapper.h
rich-sdl2-rust-sys/src/: lib.rs
rich_sdl2_rust/: all.html  enum.SdlError.html  fn.delay.html  index.html  macro.converter!.html  macro.converter.html  macro.rotate!.html  macro.rotate.html  sidebar-items.js  struct.Sdl.html  struct.SdlVersion.html  struct.Ticks.html  struct.Timer.html  struct.Video.html  trait.TimerCallback.html  type.Result.html  type.TimerCallback.html
rich_sdl2_rust/audio/: fn.all_audio_drivers.html  fn.current_driver.html  fn.device_name.html  index.html  sidebar-items.js  struct.AudioDeviceLock.html  struct.AudioDeviceProperty.html  struct.MicrophoneDevice.html  struct.SpeakerDevice.html  trait.AudioDevice.html
rich_sdl2_rust/bind/: struct.SDL_Surface.html
rich_sdl2_rust/clipboard/: index.html  sidebar-items.js  struct.ClipboardText.html
rich_sdl2_rust/color/: enum.BlendMode.html  index.html  sidebar-items.js  struct.Rgb.html  struct.Rgba.html
rich_sdl2_rust/display/: index.html  sidebar-items.js  struct.Display.html  struct.Dpi.html  struct.Mode.html
rich_sdl2_rust/error/: enum.SdlError.html  type.Result.html
rich_sdl2_rust/event/: index.html  sidebar-items.js  struct.EventBox.html  type.EventHandler.html
rich_sdl2_rust/file/: fn.base_path.html  fn.pref_path.html  index.html  sidebar-items.js  struct.RwOps.html
rich_sdl2_rust/gamma_ramp/: index.html  sidebar-items.js  struct.GammaRamp.html
rich_sdl2_rust/geo/: index.html  sidebar-items.js  struct.Line.html  struct.Point.html  struct.Rect.html  struct.Scale.html  struct.Size.html
rich_sdl2_rust/gl_context/: enum.IntervalKind.html  index.html  sidebar-items.js  struct.GlContext.html  struct.GlContextFlag.html  trait.BufferExt.html  trait.ContextSwitchExt.html
rich_sdl2_rust/haptic/: index.html  sidebar-items.js  struct.Haptic.html  struct.HapticProperty.html  struct.HapticSet.html  struct.JoystickHaptic.html  struct.MouseHaptic.html  struct.PausedHaptic.html  struct.PendingEffect.html  struct.PlayingEffect.html
rich_sdl2_rust/hint/: enum.HintPriority.html  fn.clear_hints.html  fn.get_hint.html  fn.get_hint_bool.html  fn.set_hint.html  fn.set_hint_with_priority.html  index.html  sidebar-items.js  struct.HintEvent.html  struct.HintObserver.html  trait.HintCallback.html  type.HintCallback.html
rich_sdl2_rust/metal/: index.html  sidebar-items.js  struct.MetalView.html
rich_sdl2_rust/mixer/: index.html  sidebar-items.js  struct.FormatFlag.html  struct.Mix.html
rich_sdl2_rust/performance/: fn.counter.html  fn.frequency.html  index.html  sidebar-items.js
rich_sdl2_rust/power/: enum.PowerState.html  index.html  sidebar-items.js  struct.PowerInfo.html
rich_sdl2_rust/renderer/: index.html  sidebar-items.js  struct.PasteExFlip.html  struct.PasteExOption.html  struct.Paster.html  struct.Renderer.html  trait.PasteExt.html
rich_sdl2_rust/screen_saver/: index.html  sidebar-items.js  struct.ScreenSaver.html
rich_sdl2_rust/sdl/: struct.Sdl.html  struct.SdlVersion.html
rich_sdl2_rust/surface/: index.html  sidebar-items.js  struct.RawSurface.html  trait.Surface.html
rich_sdl2_rust/system/: fn.ram_size.html  index.html  sidebar-items.js
rich_sdl2_rust/texture/: enum.TextureAccess.html  index.html  sidebar-items.js  struct.Texture.html  trait.QueryExt.html
rich_sdl2_rust/timer/: fn.delay.html  struct.Timer.html  trait.TimerCallback.html  type.TimerCallback.html
rich_sdl2_rust/ttf/: enum.Direction.html  index.html  sidebar-items.js  struct.Ttf.html
rich_sdl2_rust/video/: struct.Video.html
rich_sdl2_rust/vulkan/: index.html  sidebar-items.js  struct.VkInstance.html  struct.VkSurface.html
rich_sdl2_rust/window/: enum.HitTestResult.html  enum.SubsystemKind.html  enum.WindowContextKind.html  enum.WindowFormat.html  index.html  sidebar-items.js  struct.BorderWidths.html  struct.Brightness.html  struct.Gamma.html  struct.GammaParam.html  struct.HitTest.html  struct.Opacity.html  struct.Position.html  struct.Window.html  struct.WindowBuilder.html  struct.WindowCoord.html  struct.WindowState.html  trait.BorderExt.html  trait.BrightnessExt.html  trait.ConfigExt.html  trait.GammaExt.html  trait.HitTester.html  trait.MouseGrabExt.html  type.HitTester.html
src/: audio.rs  bind.rs  error.rs  event.rs  file.rs  haptic.rs  hint.rs  image.rs  lib.rs  mixer.rs  net.rs  power.rs  sdl.rs  system.rs  timer.rs  ttf.rs  video.rs
src/audio/: buffer.rs  driver.rs  event.rs  format.rs  queue.rs  spec.rs  status.rs  stream.rs  wav.rs
src/event/: app.rs  drop.rs  game_controller.rs  joystick.rs  keyboard.rs  mouse.rs  sensor.rs  text.rs  touch.rs  window.rs
src/file/: mode.rs  rw.rs
src/haptic/: direction.rs  effect.rs  joystick.rs  mouse.rs  playing.rs  rumble.rs
src/hint/: observer.rs
src/image/: format.rs  surface.rs
src/mixer/: chunk.rs  device.rs  music.rs
src/net/: client.rs  conn.rs  server.rs  sock.rs
src/rich_sdl2_rust/: audio.rs.html  bind.rs.html  error.rs.html  event.rs.html  file.rs.html  haptic.rs.html  hint.rs.html  lib.rs.html  mixer.rs.html  power.rs.html  sdl.rs.html  system.rs.html  timer.rs.html  ttf.rs.html  video.rs.html
src/system/: simd_alloc.rs
src/timer/: ticks.rs
src/ttf/: font.rs  script.rs
src/video/: clipboard.rs  color.rs  display.rs  gamma_ramp.rs  geo.rs  gl_attr.rs  gl_context.rs  metal.rs  pixel_format.rs  (+6 more)
(+803 files in other folders)
