[package]
name = "rich-sdl2-rust"
version = "0.13.2"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2021"
description = "The sdl2 wrapper for Rust."
repository = "https://github.com/MikuroXina/rich-sdl2-rust"
documentation = "https://mikuroxina.github.io/rich-sdl2-rust/rich_sdl2_rust/"
license = "Apache-2.0"
keywords = ["sdl2", "wrapper", "binding"]
categories = ["graphics", "gui", "multimedia", "rendering"]
rust-version = "1.56"

[features]
default = ["dynamic"]
vulkan = ["ash"]
wayland = []
nightly = ["simd_allocator"]
simd_allocator = []
ttf = ["rich-sdl2-rust-sys/ttf"]
mixer = ["rich-sdl2-rust-sys/mixer", "once_cell"]
image = ["rich-sdl2-rust-sys/image"]
net = ["rich-sdl2-rust-sys/net"]
static = ["rich-sdl2-rust-sys/static"]
dynamic = ["rich-sdl2-rust-sys/dynamic"]
vendor = ["rich-sdl2-rust-sys/vendor"]

[dependencies]
ash = { version = "0.38.0", optional = true }
bitflags = "2.5.0"
static_assertions = "1.1.0"
typed-builder = "0.18.2"
rich-sdl2-rust-sys = { path = "./rich-sdl2-rust-sys", version = "0.13.2" }
once_cell = { version = "1.19.0", optional = true }
raw-window-handle = "0.6.1"

[workspace]
members = ["rich-sdl2-rust-sys"]

[[example]]
name = "simple-window"
required-features = ["ttf"]

[[example]]
name = "show-interfaces"
required-features = ["net"]
