[package]
name = "rich-sdl2-rust-sys"
version = "0.2.1"
edition = "2021"
description = "The sdl2 binding for Rust."
repository = "https://github.com/MikuroXina/rich-sdl2-rust"
license = "Apache-2.0"
keywords = ["sdl2", "binding"]
categories = ["graphics", "gui", "multimedia", "rendering"]
links = "SDL2"

[features]
static = []
dynamic = []
vendor = ["git2"]

[build-dependencies]
bindgen = "0.59.1"
pkg-config = "0.3.22"
git2 = { version = "0.14.3", optional = true }
