[package]
name = "rich-sdl2-rust-sys"
version = "0.13.0"
edition = "2021"
description = "The sdl2 binding for Rust."
repository = "https://github.com/MikuroXina/rich-sdl2-rust"
license = "Apache-2.0"
keywords = ["sdl2", "binding"]
categories = ["graphics", "gui", "multimedia", "rendering"]
links = "SDL2"

[features]
default = ["dynamic"]
static = []
dynamic = []
vendor = []
ttf = []
mixer = []
image = []
net = []

[build-dependencies]
bindgen = "0.68.1"
pkg-config = "0.3.22"
git2 = "0.16.1"
retry = "2.0.0"
